[package]
name = "hyperecho"
version = "0.2.1"
authors = ["Thayne McCombs <astrothayne@gmail.com>"]
description = "Simple echo server"
repository = "https://github.com/tmccombs/hyperecho"
license = "MIT"
edition = "2021"

[features]
default = ["http1", "http2"]
http1 = ["hyper/http1", "hyper-util/http1"]
http2 = ["hyper/http2", "hyper-util/http2"]

[dependencies]
http = "1.1"
http-body-util = "0.1"

[dependencies.hyper]
version = "1.2"
features = ["server"]

[dependencies.hyper-util]
version = "0.1"
features = ["server", "tokio"]

[dependencies.tokio]
version = "1.36"
features = ["rt", "macros", "net"]
